--- a/timecard/timecard-server-mongodb/package.json
+++ b/timecard/timecard-server-mongodb/package.json
@@ -8,7 +8,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "mongoose": "^4.7.5"
   },
   "devDependencies": {
     "body-parser": "^1.15.2",
