--- a/timecard/package.json
+++ b/timecard/package.json
@@ -13,7 +13,10 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "moment": "^2.17.1",
+    "moment-timezone": "^0.5.11",
     "vue": "^2.1.0",
+    "vue-moment": "^2.0.2",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1"
   },
